--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                 top: 353px;
                 left: 82px;
             }
+            #nav_bar{
+                display: none;
+            }
         }
     </style>
 </head>
