--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             position: relative;
             color: white;
             left: 80px;
-            top: 110px;
+            top: 145px;
             font-size: 70px;
         }
 
@@ -147,7 +147,7 @@
             <li><img src="linkedin-removebg-preview.png" class="social_media_icon" alt="" srcset=""></li>
         </ul>
 
-        <name>Hi,I Am Sujal Chandrakar<br><span id="employed_at">CSE STUDENT AT MITS GWL || 2nd YEAR ||
+        <name>Hi,I Am Sujal <br><span id="employed_at">
                 C++/WebDev</span></name>
 
         <brief_me>Solved Over 50 Problems on leetcode with 5star in C++ proficiency on HACKERRANK.Besides currently
