--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
             #nav_bar{
                 display: none;
             }
+            name {
+                position: relative;
+                color: white;
+                left: -40px;
+                top: 145px;
+                font-size: 59px;
+            }
         }
     </style>
 </head>
