--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
                 top: 145px;
                 font-size: 59px;
             }
+            
+            #more_about_me {
+                top: 556px;
+                left: -45px;
+            }
         }
     </style>
 </head>
