--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
             #nav_bar{
                 display: none;
             }
-            name {
+            #name {
                 position: relative;
                 color: white;
-                left: -40px;
+                left: 80px;
                 top: 145px;
-                font-size: 59px;
+                font-size: 64px;
             }
             
             #more_about_me {
