--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
 
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
         body {
+
             background-color: #141414;
+
 
         }
 
@@ -31,9 +28,10 @@
             height: 100%;
         }
 
-        home_page {
-            position: absolute;
+        section {
+            position: relative;
             left: 80px;
+            height: 47rem;
         }
 
         ul {
@@ -53,7 +51,7 @@
             height: 25px;
         }
 
-        name {
+        #name {
             position: relative;
             color: white;
             left: 80px;
@@ -119,6 +117,13 @@
             left: -62px;
         }
 
+        #about_me {
+            color: white;
+
+            width: 100%;
+            height: 500px;
+        }
+
         @media only screen and (max-width:152px) {
             brief_me {
                 position: absolute;
@@ -127,10 +132,13 @@
                 height: auto;
                 top: 353px;
                 left: 82px;
+
             }
-            #nav_bar{
+
+            #nav_bar {
                 display: none;
             }
+
             #name {
                 position: relative;
                 color: white;
@@ -138,7 +146,7 @@
                 top: 145px;
                 font-size: 64px;
             }
-            
+
             #more_about_me {
                 top: 556px;
                 left: -45px;
@@ -148,19 +156,23 @@
 </head>
 
 <body>
+
     <navigation id="nav_bar">
         sujal
     </navigation>
 
-    <home_page>
+
+
+
+    <section>
         <ul>
             <li>FOLLOW ME :</li>
             <li><img src="ig-removebg-preview.png" class="social_media_icon" alt="" srcset=""></li>
             <li><img src="linkedin-removebg-preview.png" class="social_media_icon" alt="" srcset=""></li>
         </ul>
 
-        <name>Hi,I Am Sujal <br><span id="employed_at">
-                C++/WebDev</span></name>
+        <div id="name">Hi,I Am Sujal <br><span id="employed_at">
+                C++/WebDev</span></div>
 
         <brief_me>Solved Over 50 Problems on leetcode with 5star in C++ proficiency on HACKERRANK.Besides currently
             learning node js and express js and mongo db.</brief_me>
@@ -182,7 +194,17 @@
 
 
         </short_contact>
-    </home_page>
+    </section>
+
+
+
+
+
+    <section id="about_me">
+
+    </section>
+
+
 </body>
 
 </html>
