--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
     <section id="home_page">
         <ul>
-            <li>FOLLOW ME :(WEBSITE IS CONTINOUSLY DEVELOPING)</li>
+            <li>FOLLOW ME :(WEBSITE IS CONTINOUSLY DEVELOPING//CURRENTLY ONLY AVAIL FOR DESKTOP)</li>
             <li><img src="ig-removebg-preview.png" class="social_media_icon" alt="" srcset=""></li>
             <li><img src="linkedin-removebg-preview.png" class="social_media_icon" alt="" srcset=""></li>
         </ul>
